# server/src/use-cases/version-control/azure-devops/code-review/vote-metrics/vote-metrics.js
@@ -1,7 +1,7 @@
 export class VoteMetrics {
   static getPullRequestVotesTimeline(reviewers, votesTimeline) {
     return Object.keys(reviewers).map((id) => {
-      const { author, vote } = reviewers[id];
+      const { author, vote, isRequired } = reviewers[id];
       const timeOfVote = this.#getLastTimeOfVote(id, votesTimeline);
 
       return {
@@ -9,6 +9,7 @@ export class VoteMetrics {
         author,
         vote,
         timeOfVote,
+        isRequired,
       };
     });
   }
